Запросы с rag и без него
